--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "obsidian-grammarly-plugin",
+	"version": "0.0.1",
+	"description": "Add Grammarly support to Obsidian.md.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
@@ -20,5 +20,15 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+  "overrides": {
+    "@codemirror/highlight": "0.19.7",
+    "@codemirror/lang-javascript": "0.19.7",
+    "@codemirror/state": "0.19.9",
+    "@codemirror/view": "0.19.47"
+  },
+	"dependencies": {
+		"@grammarly/editor-sdk": "2.0.2",
+		"path": "^0.12.7"
 	}
 }
