--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
 	"id": "obsidian-grammarly-plugin",
-	"name": "Grammarly Support",
+	"name": "Obsidian Grammarly Plugin",
 	"version": "0.1.1",
 	"minAppVersion": "0.15.0",
 	"description": "Adds support for Grammarly to Obsidian.md.",
