--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
 	"id": "obsidian-grammarly-plugin",
-	"name": "Obsidian Grammarly Plugin",
-	"version": "0.1.1",
+	"name": "Grammarly Plugin",
+	"version": "0.2.2",
 	"minAppVersion": "0.15.0",
 	"description": "Adds support for Grammarly to Obsidian.md.",
 	"author": "Obsidian",
