--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
 		"@codemirror/view": "0.19.47"
 	},
 	"dependencies": {
-		"@grammarly/editor-sdk": "2.2.0",
-		"path": "^0.12.7"
+		"@grammarly/editor-sdk": "2.3.11"
 	}
 }
